plant lover section added

--- a/index.html
+++ b/index.html
@@ -126,17 +126,27 @@
 
 <!-- Plant Lover Section -->
 <section class="plant-lover">
-  <div class="container">
+  <div class="plant-container">
     <div class="plant-img">
-      <img src="assets/tulip.png" alt="Plant Lover">
-      <img class="badge" src="assets/badge.png" alt="Trusted Badge">
+      <img src="assets/flower-store.png" alt="Plant Lover">
+
+      <!-- <img class="badge" src="assets/badge.png" alt="Trusted Badge"> -->
     </div>
-    <div class="plant-text">
-      <h3>Plant Lover's Choice</h3>
+    <div class="plant-section-text">
+      <h3 class="flower-lover">Flower & Plants Lover</h3>
       <ul>
-        <li>Fresh and vibrant flowers</li>
-        <li>Best in quality & delivery</li>
-        <li>Designed for plant lovers</li>
+        <li class="plant-section-description">
+          Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.
+        </li>
+
+        <li class="plant-section-description">
+          Indulge your senses with the beauty and  fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.
+        </li>
+
+        <li class="plant-section-description">
+          Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.
+        </li>
+
       </ul>
     </div>
   </div>
