Deal Section added

--- a/index.html
+++ b/index.html
@@ -152,6 +152,20 @@
   </div>
 </section>
 
+
+<!-- Deal Section -->
+<section class="deal">
+  <div class="deal-container">
+    <div class="deal-text">
+      <h3 class="deal-section-h3">Latest  Deals</h3>
+      <p class="deal-text-description">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+    </div>
+  </div>
+</section>
+
+</body>
+</html>
+
 <!-- Join Section -->
 <section class="join-section">
   <div class="join-content">
@@ -203,18 +217,4 @@
 </footer>
 
 
-<!-- Deal Section -->
-<section class="deal">
-  <div class="deal-container">
-    <div class="deal-text">
-      <h3>Latest Deal</h3>
-      <p>Don't miss our best offers!</p>
-    </div>
-    <div class="deal-img">
-      <img src="assets/deals.png" alt="Deals">
-    </div>
-  </div>
-</section>
 
-</body>
-</html>
